fixed view on mobile devices

--- a/src/components/Unathorized/Unathorized.css
+++ b/src/components/Unathorized/Unathorized.css
@@ -4,4 +4,13 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin-left: 60px;
+}
+
+@media screen and (max-width: 768px) {
+
+    .stub-wrapper {
+        margin-left: 14px;
+    }
+    
 }
